--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.28",
     "expo-device": "^6.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-notifications": "^0.28.19",
     "expo-router": "~3.5.23",
@@ -37,19 +39,24 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-compare": "^3.2.2",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-mmkv": "^3.1.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native": "0.75.4",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-mmkv": "^3.0.2",
+    "react-native-permissions": "^5.0.2",
+    "react-native-reanimated": "^3.15.5",
     "react-native-redash": "^16.0.11",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10",
+    "react-native-svg": "^15.7.1",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-vector-icons": "^10.2.0",
     "socket.io-client": "^4.8.1",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@react-native-community/cli": "latest",
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
