--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-build-properties": "~0.12.5",
+    "expo-config-plugins": "^0.1.2",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "^4.0.28",
     "expo-device": "^6.0.2",
@@ -36,6 +37,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "jwt-decode": "^4.0.0",
+    "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-compare": "^3.2.2",
@@ -48,18 +50,19 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-web": "~0.19.10",
     "react-native-svg": "^15.7.1",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.10",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@react-native-community/cli": "latest",
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
